# fusion

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  rustfmt.toml  test_d5_manual.rs
crates/analysis/: Cargo.toml
crates/analysis/src/: lib.rs  misdrop.rs  moments.rs  pipeline.rs
crates/core/: Cargo.toml
crates/core/src/: board.rs  board_heights.rs  lib.rs  moves.rs  piece.rs  state.rs
crates/engine/: Cargo.toml
crates/engine/benches/: movegen.rs
crates/engine/src/: apply.rs  attack.rs  b2b.rs  bag.rs  collision.rs  collision_map.rs  collision_specialized.rs  combo.rs  config.rs  garbage.rs  gravity.rs  kicks.rs  lib.rs  move_list.rs  movegen.rs  movegen_bitboard.rs  movegen_ssa.rs  movement.rs  perft.rs  row_board.rs  tt.rs  validity_mask.rs
crates/engine/tests/: parity_matrix.rs
crates/eval/: Cargo.toml
crates/eval/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: beam.rs  lib.rs  lookahead.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/tests/: web.rs
docs/: DEVELOPMENT.md  INTEGRATION.md
scripts/: pgo-build.sh
src/: attack.rs  bag.rs  board.rs  calibration.rs  default_ruleset.rs  eval.rs  header.rs  lib.rs  move_buffer.rs  movegen.rs  pathfinder.rs  perft.rs  replay_validation.rs  replay_validation_labels.rs  replay_validation_manifest.rs  ruleset.rs  state.rs  tetrastats_features.rs  transposition.rs  wasm_board.rs  wasm_types.rs
tests/: perft.rs
