[package]
name = "fusion-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fusion-core = { path = "../core" }
fusion-engine = { path = "../engine" }
fusion-eval = { path = "../eval" }
fusion-search = { path = "../search" }
fusion-analysis = { path = "../analysis" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1.0.149"
wasm-bindgen-test = "0.3"

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
